--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,23 @@
     <title>Real Estate</title>
   </head>
   <body>
+    <!-- Top Bar -->
+    {%include 'partials/_topbar.html' %}
+
+    <!-- Nav Bar   -->
+    {% include 'partials/_navbar.html' %}
+   
+
+  
+
     {%block content%}{%endblock%}
+    
+    <!-- footer -->
+    {%include 'partials/_footer.html'%}
   
     <script src="{%static 'js/jquery-3.3.1.min.js' %} "></script>
-    <script src="{%'js/bootstrap.bundle.min.js'%} "></script>
-    <script src="{%'js/lightbox.min.js'%} "></script>
-    <script src="{%'js/main.js'%} "></script>
+    <script src="{%static 'js/bootstrap.bundle.min.js' %} "></script>
+    <script src="{%static 'js/lightbox.min.js' %} "></script>
+    <script src="{%static 'js/main.js' %} "></script>
     </body>
 </html>
